--- a/agenda.html
+++ b/agenda.html
@@ -290,8 +290,8 @@
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: From the CEO’s Desk</div>
+            <div class="sm_heading text">April 12, 2022</div>
+            <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
               <a href="ceodesk.html"
                 ><button class="md_btn">
@@ -310,7 +310,7 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
+            <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
