--- a/news.html
+++ b/news.html
@@ -45,9 +45,9 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="thin date">April 12, 2022 | EnterpriseNGR</div>
             <div class="bold title">
-              New Report: Youth of Enterprise (YOE) Internship Programme Launch
+              Youth of Enterprise (YOE) Internship Programme Launch
             </div>
             <div class="text">
               <div class="thin description">
@@ -73,8 +73,8 @@
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: From the CEO’s Desk</div>
+            <div class="thin date">April, 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">From the CEO’s Desk</div>
             <div class="text">
               <div class="thin description">
                 I want to take this opportunity to reflect on the EnterpriseNGR
