--- a/policy.html
+++ b/policy.html
@@ -47,15 +47,13 @@
             <div class="image">
               <img src="images/unemployment.jpg" alt="" />
             </div>
-            <div class="thin date">May 7 2022 | EnterpriseNGR</div>
-            <div class="bold title">
-              New Report: The State of Unemployment in Nigeria
-            </div>
+            <div class="thin date">April, 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">The State of Unemployment in Nigeria</div>
             <div class="text">
               <div class="thin description">
                 The dire unemployment situation in Nigeria is worrisome. Many
                 graduates in the country continue to face challenges with
-                finding employment and this is a widespread concern.
+                finding employment and...
               </div>
               <a href="unemploymentstate.html">
                 <button class="md_btn">
@@ -74,8 +72,8 @@
             <div class="image">
               <img src="images/stateofngr.jpg" alt="" />
             </div>
-            <div class="thin date">May 7 2022 | EnterpriseNGR</div>
-            <div class="bold title">New Report: March 2022 Policy Insights</div>
+            <div class="thin date">April, 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">March 2022 Policy Insights</div>
             <div class="text">
               <div class="thin description">
                 There is growing attention on Environmental, Social and
