--- a/unemploymentstate.html
+++ b/unemploymentstate.html
@@ -51,8 +51,7 @@
         <div class="article_detail">
           <div class="child green">Policy,Insight |</div>
           <div class="child">April 12, 2022 |</div>
-          <div class="child">Peter Allan |</div>
-          <div class="child">Comments: 0</div>
+          <div class="child">EnterpriseNGR</div>
         </div>
         <div class="md_heading">The State of Unemployment in Nigeria</div>
         <div class="article_text">
@@ -203,8 +202,8 @@
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: From the CEO’s Desk</div>
+            <div class="sm_heading text">April 12, 2022</div>
+            <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
               <a href="ceodesk.html"
                 ><button class="md_btn">
@@ -223,7 +222,7 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
+            <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
