--- a/ceodesk.html
+++ b/ceodesk.html
@@ -40,7 +40,7 @@
 
     <div class="category">
       <div class="child green">News & Media ></div>
-      <div class="child grey">New Report: From the CEO’s Desk</div>
+      <div class="child grey">From the CEO’s Desk</div>
     </div>
 
     <article class="article">
@@ -51,8 +51,7 @@
         <div class="article_detail">
           <div class="child green">News,Media |</div>
           <div class="child">April 12, 2022 |</div>
-          <div class="child">Obi Ibekwe |</div>
-          <div class="child">Comments: 0</div>
+          <div class="child">EnterpriseNGR</div>
         </div>
         <div class="md_heading">From the CEO’s Desk</div>
         <div class="article_text">
@@ -250,8 +249,8 @@
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: From the CEO’s Desk</div>
+            <div class="sm_heading text">April 12, 2022</div>
+            <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
               <a href="ceodesk.html"
                 ><button class="md_btn">
@@ -270,7 +269,7 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
+            <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
