--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -53,6 +53,7 @@
         <div class="article_detail">
           <div class="child green">News,Media |</div>
           <div class="child">April 12, 2022 |</div>
+          <div class="child">EnterpriseNGR</div>
         </div>
         <div class="md_heading">
           SAVE THE DATE | Youth of Enterprise (YOE) Internship Programme Launch
@@ -164,8 +165,8 @@
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: From the CEO’s Desk</div>
+            <div class="sm_heading text">April 12, 2022</div>
+            <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
               <a href="ceodesk.html"
                 ><button class="md_btn">
@@ -184,7 +185,7 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
+            <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
