--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -79,18 +79,17 @@
           </p>
           <br />
           <p>
-            <button class="md_btn green">
-              <span
-                class="iconify-inline"
-                data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
-                data-width="29"
-                data-height="29"
-              ></span>
-              <span class="btn_text">Register Here</span>
-            </button>
             <a href="https://jnml.io/YouthOfEnterprise"
-              >https://jnml.io/YouthOfEnterprise</a
+              ><button class="md_btn green">
+                <span
+                  class="iconify-inline"
+                  data-icon="bi:arrow-right-circle"
+                  style="color: #40ba7b"
+                  data-width="29"
+                  data-height="29"
+                ></span>
+                <span class="btn_text">Register Here</span>
+              </button></a
             >
           </p>
           <br />
@@ -110,18 +109,17 @@
           </p>
           <br />
           <p>
-            <button class="md_btn green">
-              <span
-                class="iconify-inline"
-                data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
-                data-width="29"
-                data-height="29"
-              ></span>
-              <span class="btn_text">Register Here</span>
-            </button>
             <a href="https://jnml.io/YouthOfEnterprise"
-              >https://jnml.io/YouthOfEnterprise</a
+              ><button class="md_btn green">
+                <span
+                  class="iconify-inline"
+                  data-icon="bi:arrow-right-circle"
+                  style="color: #40ba7b"
+                  data-width="29"
+                  data-height="29"
+                ></span>
+                <span class="btn_text">Register Here</span>
+              </button></a
             >
           </p>
           <br />
