--- a/agenda.html
+++ b/agenda.html
@@ -44,9 +44,9 @@
         world.
       </div>
       <div class="md_heading">
-        We aim to advance this agenda by actively collaborating with our
+        "We aim to advance this agenda by actively collaborating with our
         members, industry partners, policymakers, regulators and other
-        stakeholders locally and internationally.
+        stakeholders locally and internationally."
       </div>
 
       <div class="economy_grid">
