--- a/greenstart.html
+++ b/greenstart.html
@@ -141,7 +141,7 @@
           <div class="thin">
             Youth of Enterprise (YOE) Internship Programme is one of
             EnterpriseNGR’s immediate developmental initiatives that aims to
-            reverse the national youth unemployment and under-employment trends
+            address the national youth unemployment and under-employment trends
             as well as build capacity in the private sector.
           </div>
           <div class="thin">
