--- a/member.html
+++ b/member.html
@@ -57,8 +57,8 @@
             industry stakeholders domestically and internationally.
           </div>
           <div class="thin">
-            Our members come from various sub-sectors of the Financial & related
-            Professional services sector which include Banking, Asset
+            Our members come from various sub-sectors of the Financial and
+            Professional Services sector which include Banking, Asset
             Management, Capital Markets & Green Finance, Insurance, FinTech,
             Professional Services (Law, Accountancy, Consulting), Islamic
             Finance, and Business Process Outsourcing
