--- a/agenda.html
+++ b/agenda.html
@@ -46,7 +46,7 @@
       <div class="md_heading">
         "We aim to advance this agenda by actively collaborating with our
         members, industry partners, policymakers, regulators and other
-        stakeholders locally and internationally."
+        stakeholders."
       </div>
 
       <div class="economy_grid">
