--- a/agenda.html
+++ b/agenda.html
@@ -220,8 +220,8 @@
           <div class="md_heading">Partnership</div>
           <div>
             We build strong partnerships with key stakeholders in the private
-            and public sectors, locally and internationally, to achieve our
-            objectives across our priority areas.
+            and public sectors, to achieve our objectives across our priority
+            areas.
           </div>
         </div>
         <div>
