--- a/member.html
+++ b/member.html
@@ -105,9 +105,9 @@
               <div class="sm_heading">BRONZE (₦1m annually)</div>
             </div>
             <div class="thin">
-              Institutions in the Nigerian financial and related professional
-              services sector who pay the annual membership fee. They shall have
-              rights to vote additional Board members.
+              Institutions in the Nigerian Financial and Professional Services
+              sector who pay the annual membership fee. They shall have rights
+              to vote additional Board members.
             </div>
           </div>
         </div>
