--- a/about.html
+++ b/about.html
@@ -771,8 +771,9 @@
       <div class="md_heading">Advisory Council</div>
       <div class="thin">
         EnterpriseNGR’s Advisory Council is the senior consultative forum of the
-        Company. The Advisory Council consists of a high-level representation of
-        industry leaders, and relevant Government and Regulatory institutions.
+        organisation. The Advisory Council consists of a high-level
+        representation of industry leaders, and supports the Board in effective
+        leadership and governance.
       </div>
     </section>
 
