--- a/greenstart.html
+++ b/greenstart.html
@@ -68,8 +68,8 @@
       <div class="greenstart_ad">
         <div class="md_heading green">Ready to get your #GreenStart?</div>
         <div class="bold">
-          YOE will make you a star candidate for recruitment into the financial
-          and professional services sector with the following:
+          YOE will make you a star candidate for recruitment into Nigeria’s
+          labour force with the following:
         </div>
         <div>
           <ul>
@@ -152,8 +152,7 @@
           </div>
           <div class="thin">
             We seek to improve the employment and employability of Nigerian
-            youth within the Financial and Professional Services (“FPS”) sector
-            with the YOE Internship Programme.
+            youth with the YOE Internship Programme.
           </div>
         </div>
 
