--- a/member.html
+++ b/member.html
@@ -91,10 +91,10 @@
               <div class="sm_heading">₦100m One-off</div>
             </div>
             <div class="thin">
-              These are custodians of the EnterpriseNGR Vision and as such will
-              be given voting rights. They will be granted lifetime membership
-              as their future membership fees will be waived in view of their
-              seed fund contributions.
+              This is our highest class of membership and they are custodians of
+              the EnterpriseNGR Vision and as such will be given voting rights.
+              They provide long-term leadership and become members of the Board
+              of Directors on a rotational basis.
             </div>
           </div>
           <div class="item">
