--- a/ceodesk.html
+++ b/ceodesk.html
@@ -63,7 +63,7 @@
           </p>
           <br />
           <p>
-            Our launch event tagged, <strong>the Voices of Enterprise</strong> ,
+            Our launch event tagged, the <strong>Voices of Enterprise</strong>,
             was a huge success with high-level speakers including amongst others
             the Vice President of Nigeria, the globally acclaimed investment and
             finance guru, Bayo Ogunlesi, our friends from Enterprise Singapore,
@@ -78,11 +78,11 @@
             Following our official launch, we have focused on strengthening our
             organisational structures and expanding our membership base. I'm
             delighted to report that we have increased our membership base by
-            50% since our official launch. I wish acknowledge our new Founding
-            Members: DLM Capital Group, Investment One Financial Services
-            Limited and Custodian Investment Plc. who by this membership have
-            made a lifelong commitment towards building the Nigerian financial
-            and professional services ecosystem.
+            50% since our official launch. I wish to acknowledge our new
+            Founding Members: DLM Capital Group, Investment One Financial
+            Services Limited and Custodian Investment Plc. who by this
+            membership have made a lifelong commitment towards building the
+            Nigerian financial and professional services ecosystem.
           </p>
           <br />
           <p>
@@ -114,9 +114,10 @@
           <br />
           <p>
             TheCityUK also graciously introduced us to the World Alliance of
-            International Financial Centers (WAIFC) and has agreed to support
-            our bid to become an Observer at the organisation as a prelude to
-            seeking full membership.
+            International Financial Centers (WAIFC) and supported our bid to
+            become an Observer at the organisation as a prelude to seeking full
+            membership. I am pleased to note that EnterpriseNGR is now an
+            Observer at WAIFC.
           </p>
           <br />
           <p>
@@ -156,8 +157,8 @@
             at large. We had a meeting with the Statistician General of the
             Federal Republic of Nigeria and we are working on Terms of Reference
             for a partnership to generate accurate and granulated data for the
-            Financial and Professional Services sector to support. optimal
-            policy formulation.
+            Financial and Professional Services sector to support optimal policy
+            formulation.
           </p>
           <br />
           <p>
@@ -188,9 +189,9 @@
           </p>
           <br />
           <p>
-            I do hope you enjoy this first instalment of our quarterly
-            newsletter and I enjoin you all to join hands with us to build the
-            FPS sector and Nigeria at large.
+            I do hope you enjoy the first instalment of our quarterly newsletter
+            and I enjoin you all to join hands with us to build the FPS sector
+            and Nigeria at large.
           </p>
           <br />
           <p>
